--- a/pam/libpam/Makefile
+++ b/pam/libpam/Makefile
@@ -1,8 +1,8 @@
 CFLAGS +=  -Wall
-all: /lib/security/pam_latch_otp.so
+all: /lib/security/pam_latch.so
 
 clean:
-	$(RM) /lib/security/pam_latch_otp.so *.o
+	$(RM) /lib/security/pam_latch.so *.o
 	
-/lib/security/pam_latch_otp.so: pam_latch_otp.c ../latch.h
+/lib/security/pam_latch.so: pam_latch.c ../latch.h
 	$(CC) $(CFLAGS) -fPIC -shared -Xlinker -x -o $@ ../latch.c $< -lcurl -lcrypto -lpam
